--- a/package.json
+++ b/package.json
@@ -2,10 +2,23 @@
   "name": "boulderhouse-bookings",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Logan Kuzyk",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "d3-time-format": "^3.0.0",
+    "gaxios": "^1.8.4",
+    "googleapis": "^74.2.0",
+    "lodash.clonedeep": "^4.5.0"
+  },
+  "devDependencies": {
+    "@types/d3-time-format": "^3.0.0",
+    "@types/dateformat": "^3.0.1",
+    "@types/lodash.clonedeep": "^4.5.6",
+    "@types/node": "^15.6.1",
+    "google-auth-library": "^3.1.2"
+  }
 }
