--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "d3-time-format": "^3.0.0",
     "gaxios": "^1.8.4",
+    "google-auth-library": "^7.1.0",
     "googleapis": "^74.2.0",
     "lodash.clonedeep": "^4.5.0"
   },
@@ -18,7 +19,6 @@
     "@types/d3-time-format": "^3.0.0",
     "@types/dateformat": "^3.0.1",
     "@types/lodash.clonedeep": "^4.5.6",
-    "@types/node": "^15.6.1",
-    "google-auth-library": "^3.1.2"
+    "@types/node": "^15.6.1"
   }
 }
